<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navfragments.EventCreatorFragment">

    <LinearLayout
        android:id="@+id/event_creator_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/event_creator_location_layout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/event_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:focusable="false"
                android:longClickable="false"
                android:hint="@string/event_date"
                android:importantForAutofill="no"
                android:inputType="date" />

            <EditText
                android:id="@+id/event_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:ems="10"
                android:focusable="false"
                android:longClickable="false"
                android:hint="@string/event_time"
                android:importantForAutofill="no"
                android:inputType="time" />
        </LinearLayout>

        <EditText
            android:id="@+id/event_max_attendees_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_max_attendees"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/event_description_text"
            android:layout_width="match_parent"
            android:layout_height="366dp"
            android:ems="10"
            android:hint="@string/event_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/event_creator_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/event_creator_button_create"
        android:orientation="vertical">

        <Button
            android:id="@+id/event_location_select_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_set_location_button" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/event_creator_map"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>

    <Button
        android:id="@+id/event_creator_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/event_create_event_button" />
</RelativeLayout>