<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_home"
    tools:context=".navfragments.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:paddingTop="12dp"
        android:text="@string/settings_title"
        android:textColor="#000"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/settings_picture_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_below="@+id/settings_title"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/editPictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/picture_edit"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_fields_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_picture_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Email:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorSettings"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="Username:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="242dp"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorSettings"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:backgroundTint="?attr/colorError"
            android:text="@string/signOut"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>